objects/FSL_SRT__c.object
<CustomObject>
    <fields>
        <fullName>Troubleshoot_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshoot_BMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Troubleshoot__c</fullName>
        <label>Troubleshoot</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Diag Access</fullName>
                </value>
                <value>
                    <fullName>Repair Access</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>99Time</fullName>
                </value>
                <value>
                    <fullName>Overlap</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Field Action Access</fullName>
                </value>
                <value>
                    <fullName>BMS SRT</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_R_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Access Code R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Allocation__c</fullName>
        <label>Warranty Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Details__c</fullName>
        <description>Formula filed created for Warranty Details</description>
        <formula>&apos;Assignment : &apos;+  Assignment__c + br()+
&apos;% Warrantable : &apos;+ SRT_Warrantable__c +br()+
&apos;Account Code : &apos;+  AccountCode_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSrtFailCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to determine, whether the failcode is present only in SRT object, but not in solution component. Created to handle this scenario for failcode Account code drop down in jobplan srt</description>
        <label>isSrtFailCode</label>
        <type>Checkbox</type>
    </fields>
    <label>FSL SRT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CSS_Fault_Code__c</columns>
        <columns>Field_Actions__c</columns>
        <columns>Field_Actions_SRTs__c</columns>
        <columns>Diagnostic_SRTs__c</columns>
        <columns>Repair_SRTs__c</columns>
        <columns>Failure_Name__c</columns>
        <columns>Failure__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Type__c</columns>
        <columns>Assignment__c</columns>
        <columns>SRT_Select__c</columns>
        <columns>SRT_Time__c</columns>
        <columns>SRT_Quantity__c</columns>
        <columns>Solution_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Order__c</field>
            <operation>contains</operation>
            <value>486</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Diagnostic_SRTs__c</columns>
        <columns>Repair_SRTs__c</columns>
        <columns>Field_Actions_SRTs__c</columns>
        <columns>SRT_Time__c</columns>
        <columns>SRT_Quantity__c</columns>
        <columns>Type__c</columns>
        <columns>SRT_Type__c</columns>
        <columns>SRT_Select__c</columns>
        <columns>Assignment__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Solution_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Action</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SRT Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL SRTs</pluralLabel>
    <recordTypes>
        <fullName>FA_SRT</fullName>
        <active>true</active>
        <label>FA SRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL_SRT</fullName>
        <active>true</active>
        <label>FSL SRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_SRT</fullName>
        <active>true</active>
        <label>Non SRT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL_Service_Order_Closed_SRT</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISPICKVAL(Service_Order__r.Status, &quot;Closed&quot;), ISPICKVAL(Service_Order__r.Status, &quot;Canceled&quot;)), NOT( ISCHANGED( Total_Actual_Hours__c ) ) )</errorConditionFormula>
        <errorMessage>Changes cannot be made after a job is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRT_Code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Name!=&apos;00-904-00&apos;&amp;&amp;Name!=&apos;00-902-00&apos;&amp;&amp;Name!=&apos;00-901-00&apos; &amp;&amp;ISCHANGED(Name)  &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>SRT Code cannot be Edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SRT_RTime</fullName>
        <active>false</active>
        <errorConditionFormula>( Access_Code_R__c &lt;= 0 ) &amp;&amp; ( Use_R_Time__c = TRUE )</errorConditionFormula>
        <errorDisplayField>Access_Code_R__c</errorDisplayField>
        <errorMessage>You can use R Time only if it is greater than 0</errorMessage>
    </validationRules>
</CustomObject>